# GTA-fivem-

./: Makefile  README.md  pyproject.toml
blackline_forge_ai/: MANIFEST.json  __init__.py
blackline_forge_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
blackline_forge_ai/docs/: ARCHITECTURE.md
blackline_forge_ai/examples/packs/ashline_courier_01/: pack.json
blackline_forge_ai/examples/single/: ashline_tactical_hoodie.json
blackline_forge_ai/pipeline/: pipeline.state_machine.json
blackline_forge_ai/prompts/: mode_character.txt  mode_concept.txt  mode_convert.txt  mode_pack.txt  mode_single.txt  mode_variant.txt  system_prompt.txt
blackline_forge_ai/registry/blocklists/: brands.txt
blackline_forge_ai/registry/materials/: material_library.json
blackline_forge_ai/registry/palettes/: palette_library.json
blackline_forge_ai/schemas/character/: character.schema.json
blackline_forge_ai/schemas/items/: item.schema.json
blackline_forge_ai/schemas/packs/: pack.schema.json
blackline_forge_ai/validators/: __init__.py  validator.py  validator.rules.json
tests/: test_validator_cli.py
